# currency-trading-assistant-cli

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements-cli.txt
backend/ai/: __init__.py
backend/app/ai/: llama_analyst.py
backend/app/data/: __init__.py  alphavantage.py  data_fetcher.py  dukascopy.py
backend/backtest/: __init__.py
backend/data/: __init__.py  forex_fetcher.py
cli/: main.py
cli/commands/: ai.py  backtest.py  data.py  signals.py
cli/templates/: config_template.toml
cli/utils/: config.py  database.py  display.py
config/: config.toml
scripts/: install.ps1  run.ps1  setup.ps1
trading-dashboard/: start-backend.sh  start-frontend.sh
trading-dashboard/backend/: package-lock.json  package.json  requirements.txt  start-server.bat  test-api.html
trading-dashboard/backend/api/: main.py
trading-dashboard/frontend/: package-lock.json  package.json  start-backend.ps1  start-frontend.ps1
trading-dashboard/frontend/public/: index.html
trading-dashboard/frontend/src/: App.js
trading-dashboard/frontend/src/components/: AIChat.jsx  AISentiment.jsx  Dashboard.js  Dashboard.jsx  LivePrices.js  LivePrices.jsx  PriceChart.jsx  TradingPanel.jsx  TradingSignals.jsx
trading-dashboard/frontend/src/services/: api.js
